merge in nroudit:master