@@ -32,7 +32,8 @@ import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.UnsupportedEncodingException;
+import java.lang.System.Logger;
+import java.lang.System.Logger.Level;
 import java.net.Authenticator;
 import java.net.HttpURLConnection;
 import java.net.PasswordAuthentication;
@@ -40,6 +41,7 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URLConnection;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -50,8 +52,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Properties;
-import java.util.logging.Level;
-import java.util.logging.Logger;
 import java.util.regex.Pattern;
 import javax.xml.stream.XMLInputFactory;
 import javax.xml.stream.XMLStreamConstants;
@@ -63,7 +63,7 @@ import org.osgi.framework.Version;
 import org.weasis.launcher.WeasisLauncher.Type;
 
 public class ConfigData {
-  private static final Logger LOGGER = Logger.getLogger(ConfigData.class.getName());
+  private static final Logger LOGGER = System.getLogger(ConfigData.class.getName());
 
   // Params, see
   // https://nroduit.github.io/en/getting-started/weasis-protocol/#modify-the-launch-parameters
@@ -93,7 +93,7 @@ public class ConfigData {
 
     if (args != null) {
       for (int i = 0; i < args.length; i++) {
-        LOGGER.log(Level.INFO, "Main arg {0} = {1}", new Object[] {Integer.toString(i), args[i]});
+        LOGGER.log(Level.INFO, "Main arg {0} = {1}", Integer.toString(i), args[i]);
       }
 
       int index = Utils.getWeasisProtocolIndex(args);
@@ -213,18 +213,18 @@ public class ConfigData {
     applyConfigToSystemProperties();
 
     filterConfigProperties(felixConfig);
-    if (LOGGER.isLoggable(Level.FINEST)) {
+    if (LOGGER.isLoggable(Level.TRACE)) {
       felixProps.forEach(
           (k, v) ->
               LOGGER.log(
-                  Level.FINEST, () -> String.format("Felix config: %s = %s", k, v))); // NON-NLS
+                  Level.TRACE, () -> String.format("Felix config: %s = %s", k, v))); // NON-NLS
     }
 
     File appFolder = new File(felixProps.get(Constants.FRAMEWORK_STORAGE)).getParentFile();
     appFolder.mkdirs();
     addProperty(P_WEASIS_PATH, appFolder.getPath());
     System.setProperty(P_WEASIS_PATH, appFolder.getPath());
-    LOGGER.log(Level.CONFIG, "Properties: {0}", properties);
+    LOGGER.log(Level.INFO, "Properties: {0}", properties);
   }
 
   private void filterConfigProperties(Properties felixConfig) {
@@ -245,22 +245,17 @@ public class ConfigData {
   }
 
   private void extractArgFromUri(String uri) {
-    try {
-      String url = URLDecoder.decode(uri, "UTF-8"); // NON-NLS
-      String[] cmds = url.split("\\$");
-      boolean windows =
-          System.getProperty(P_OS_NAME, "").toLowerCase().startsWith("win"); // NON-NLS
-      if (cmds.length > 0) {
-        for (int i = 1; i < cmds.length; i++) {
-          // Fix Windows issue (add a trailing slash)
-          if (windows && i == cmds.length - 1 && cmds[i].endsWith("/")) {
-            cmds[i] = cmds[i].substring(0, cmds[i].length() - 1);
-          }
-          arguments.add(cmds[i]);
+    String url = URLDecoder.decode(uri, StandardCharsets.UTF_8);
+    String[] cmds = url.split("\\$");
+    boolean windows = System.getProperty(P_OS_NAME, "").toLowerCase().startsWith("win"); // NON-NLS
+    if (cmds.length > 0) {
+      for (int i = 1; i < cmds.length; i++) {
+        // Fix Windows issue (add a trailing slash)
+        if (windows && i == cmds.length - 1 && cmds[i].endsWith("/")) {
+          cmds[i] = cmds[i].substring(0, cmds[i].length() - 1);
         }
+        arguments.add(cmds[i]);
       }
-    } catch (UnsupportedEncodingException e) {
-      LOGGER.log(Level.SEVERE, "Decoding weasis URI", e);
     }
   }
 
@@ -324,7 +319,7 @@ public class ConfigData {
       addProperty("weasis.import.dicom", Boolean.TRUE.toString());
       addProperty("weasis.import.dicom.qr", Boolean.TRUE.toString());
     } catch (Exception e) {
-      LOGGER.log(Level.SEVERE, "Apply Codebase", e);
+      LOGGER.log(Level.ERROR, "Apply Codebase", e);
     }
     return baseURI;
   }
@@ -337,26 +332,12 @@ public class ConfigData {
     configParams.forEach(
         (k, v) -> {
           switch (k) {
-            case PARAM_CONFIG_URL:
-              addProperty(P_WEASIS_CONFIG_URL, v.get(0));
-              break;
-            case PARAM_CODEBASE:
-              addProperty(P_WEASIS_CODEBASE_URL, v.get(0));
-              break;
-            case PARAM_CODEBASE_EXT:
-              addProperty(P_WEASIS_CODEBASE_EXT_URL, v.get(0));
-              break;
-            case PARAM_AUTHORIZATION:
-              addProperty(P_HTTP_AUTHORIZATION, v.get(0));
-              break;
-            case PARAM_PROPERTY:
-              addProperties(v);
-              break;
-            case PARAM_ARGUMENT:
-              addArguments(v);
-              break;
-            default:
-              break;
+            case PARAM_CONFIG_URL -> addProperty(P_WEASIS_CONFIG_URL, v.get(0));
+            case PARAM_CODEBASE -> addProperty(P_WEASIS_CODEBASE_URL, v.get(0));
+            case PARAM_CODEBASE_EXT -> addProperty(P_WEASIS_CODEBASE_EXT_URL, v.get(0));
+            case PARAM_AUTHORIZATION -> addProperty(P_HTTP_AUTHORIZATION, v.get(0));
+            case PARAM_PROPERTY -> addProperties(v);
+            case PARAM_ARGUMENT -> addArguments(v);
           }
         });
   }
@@ -473,14 +454,14 @@ public class ConfigData {
           if (pwd != null) {
             pwd = Utils.decrypt(pwd, "proxy.auth");
             if (pwd != null && pwd.length > 0) {
-              authPassword = new String(pwd);
+              authPassword = new String(pwd, StandardCharsets.UTF_8);
               applyPasswordAuthentication(authUser, authPassword);
               applyProxyProperty("http.proxyUser", authUser, mproxy);
               applyProxyProperty("http.proxyPassword", authPassword, mproxy);
             }
           }
         } catch (Exception e) {
-          LOGGER.log(Level.SEVERE, "Cannot store the proxy password", e);
+          LOGGER.log(Level.ERROR, "Cannot store the proxy password", e);
         }
       }
     }
@@ -528,7 +509,7 @@ public class ConfigData {
           try {
             val = new File(new URI(arg)).getPath();
           } catch (URISyntaxException e) {
-            LOGGER.log(Level.SEVERE, "Convert URI to file", e);
+            LOGGER.log(Level.ERROR, "Convert URI to file", e);
           }
         }
         arguments.add("dicom:get -l \"" + val + "\""); // NON-NLS
@@ -598,8 +579,7 @@ public class ConfigData {
         urlConnection.setReadTimeout(
             Integer.parseInt((System.getProperty("UrlReadTimeout", "2000")))); // NON-NLS
 
-        if (urlConnection instanceof HttpURLConnection) {
-          HttpURLConnection httpURLConnection = (HttpURLConnection) urlConnection;
+        if (urlConnection instanceof HttpURLConnection httpURLConnection) {
           if (httpURLConnection.getResponseCode() != HttpURLConnection.HTTP_OK) {
             throw new IOException(httpURLConnection.getResponseMessage());
             // TODO ## redirection stream is not handled
@@ -622,9 +602,9 @@ public class ConfigData {
 
     } catch (Exception e) {
       LOGGER.log(
-          Level.SEVERE,
-          e,
-          () -> String.format("Error Loading config service %s", configServicePath)); // NON-NLS
+          Level.ERROR,
+          () -> String.format("Error Loading config service %s", configServicePath), // NON-NLS
+          e);
     } finally {
       FileUtil.safeClose(stream);
     }
@@ -639,16 +619,14 @@ public class ConfigData {
 
     while (xmler.hasNext()) {
       if (xmler.next() == XMLStreamConstants.START_ELEMENT) {
-        switch (xmler.getLocalName()) {
-          case "property": // NON-NLS
-            String name = xmler.getAttributeValue(null, "name"); // NON-NLS
-            String value = xmler.getAttributeValue(null, "value"); // NON-NLS
-            addConfigParam(
-                configParams, PARAM_PROPERTY, String.format("%s %s", name, value)); // NON-NLS
-            break;
-          case "argument": // NON-NLS
-            addConfigParam(configParams, PARAM_ARGUMENT, xmler.getElementText());
-            break;
+        String localName = xmler.getLocalName();
+        if ("property".equals(localName)) { // NON-NLS
+          String name = xmler.getAttributeValue(null, "name"); // NON-NLS
+          String value = xmler.getAttributeValue(null, "value"); // NON-NLS
+          addConfigParam(
+              configParams, PARAM_PROPERTY, String.format("%s %s", name, value)); // NON-NLS
+        } else if ("argument".equals(localName)) { // NON-NLS
+          addConfigParam(configParams, PARAM_ARGUMENT, xmler.getElementText());
         }
       }
     }
@@ -669,7 +647,7 @@ public class ConfigData {
       WeasisLauncher.readProperties(propURI, felixConfig);
 
     } else {
-      LOGGER.log(Level.SEVERE, "No config.properties path found, Weasis cannot start!");
+      LOGGER.log(Level.ERROR, "No config.properties path found, Weasis cannot start!");
     }
 
     propURI = getPropertiesURI(EXTENDED_PROPERTIES_PROP, EXTENDED_PROPERTIES_FILE_VALUE);
@@ -713,7 +691,7 @@ public class ConfigData {
           System.setProperty(WeasisLauncher.P_WEASIS_MIN_NATIVE_VERSION, val);
         }
       } catch (Exception e) {
-        LOGGER.log(Level.SEVERE, "Cannot check compatibility with remote package", e);
+        LOGGER.log(Level.ERROR, "Cannot check compatibility with remote package", e);
       }
     }
   }
@@ -730,7 +708,7 @@ public class ConfigData {
           propURL = new URI(custom);
         }
       } catch (URISyntaxException e) {
-        LOGGER.log(Level.SEVERE, configProp, e);
+        LOGGER.log(Level.ERROR, configProp, e);
         return null;
       }
     } else {
@@ -744,7 +722,7 @@ public class ConfigData {
     try {
       return new File(confDir, configFile).toURI();
     } catch (Exception ex) {
-      LOGGER.log(Level.SEVERE, configFile, ex);
+      LOGGER.log(Level.ERROR, configFile, ex);
       return null;
     }
   }
